tests/unit-fail-compilation/j085a.ref
j085a.c[1:5-9] : undeclared identifier in parameter identifier list
Fatal error: exception Frontc.ParseError("Parse error")
Entity: line 1: parser error : Document is empty
Parsing error
^
Translation failed. Run kcc -d j085a.c to see commands run.
